--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,13 @@ html {
     scroll-padding: 1rem;
 }
 
+#page1 {
+    background-image: linear-gradient(rgb(10, 10, 10),rgb(40, 40, 40));
+}
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-image: linear-gradient(black,rgb(40, 40, 40));
+    background-color: rgb(10, 10, 10);
 }
 
 .navbar {
@@ -53,7 +56,7 @@ body {
 
 header > h1{
     color: white;
-    background-color: black;
+    background-color: rgb(10, 10, 10);
     padding: 60px 20px 0px 20px;
     text-align: center;
 }
@@ -253,9 +256,15 @@ textarea {
     0 1px 1px 0 rgba(0,0,0,0.1);
 }
 
-footer {
+#footer{
     background-image: linear-gradient(rgb(40, 40, 40),rgb(0, 0, 0));
+    color:rgba(255, 255, 255, 0.4)
+}
+footer {
+    background-color: rgb(10, 10, 10);
     padding: 10px;
     text-align: center;
-    color:rgb(255, 255, 255,0.4);
+    color:rgba(255, 255, 255, 0.4)
 }
+
+
